Clean up MCP database detection and centralize branch type recognition
- Delegate MCP runtime database type resolution to DatabaseTypeFactory
- Add dialect branch metadata options for Doris and MariaDB
- Propagate actual database type through storage resource validation paths
- Fail fast when branch type detection SQL fails
- Add ambiguity diagnostics, error-code docs, and focused tests